@@ -3,8 +3,6 @@ package ti4.commands.special;
 import java.util.List;
 import java.util.Random;
 import java.util.Set;
-import java.util.stream.Collectors;
-
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
@@ -22,8 +20,12 @@ class SwapTwoSystems extends GameStateSubcommand {
 
     public SwapTwoSystems() {
         super(Constants.SWAP_SYSTEMS, "Swap two systems", true, false);
-        addOptions(new OptionData(OptionType.STRING, Constants.TILE_NAME, "System/Tile name to swap from or RND").setRequired(true).setAutoComplete(true));
-        addOptions(new OptionData(OptionType.STRING, Constants.TILE_NAME_TO, "System/Tile name to swap to or RND").setRequired(true).setAutoComplete(true));
+        addOptions(new OptionData(OptionType.STRING, Constants.TILE_NAME, "System/Tile name to swap from or RND")
+                .setRequired(true)
+                .setAutoComplete(true));
+        addOptions(new OptionData(OptionType.STRING, Constants.TILE_NAME_TO, "System/Tile name to swap to or RND")
+                .setRequired(true)
+                .setAutoComplete(true));
     }
 
     @Override
@@ -67,7 +69,7 @@ class SwapTwoSystems extends GameStateSubcommand {
         List<Tile> availableTiles = getGame().getTileMap().values().stream()
                 .filter(tile -> !EXCLUDED_POSITIONS.contains(tile.getPosition()))
                 .filter(tile -> !tile.getTileModel().isHyperlane())
-                .collect(Collectors.toList());
+                .toList();
 
         if (availableTiles.isEmpty()) {
             return null;
